<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_lines">

    <TextView
        android:id="@+id/review_author_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8_dp"
        android:textSize="@dimen/regular_device_text_size"
        android:textStyle="italic"
        tools:text="@string/review_author_dummy" />

    <TextView
        android:id="@+id/review_content_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8_dp"
        android:textSize="@dimen/regular_device_text_size"
        tools:text="@string/review_content_dummy" />

    <TextView
        android:id="@+id/review_read_more_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_8_dp"
        android:paddingLeft="@dimen/padding_8_dp"
        android:text="@string/review_read_more"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/regular_device_text_size"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>