<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADADA"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detail_image_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:adjustViewBounds="true" />

    <ScrollView
        android:id="@+id/detail_scroll_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8_dp"
                android:text="@string/original_title"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8_dp"
                android:paddingLeft="@dimen/padding_8_dp"
                android:paddingRight="@dimen/padding_8_dp" />

            <TextView
                android:id="@+id/detail_synopsis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8_dp"
                android:text="@string/original_synopsis"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_synopsis_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8_dp"
                android:paddingLeft="@dimen/padding_8_dp"
                android:paddingRight="@dimen/padding_8_dp" />

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8_dp"
                android:text="@string/original_release_date"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8_dp"
                android:paddingLeft="@dimen/padding_8_dp"
                android:paddingRight="@dimen/padding_8_dp" />

            <TextView
                android:id="@+id/vote_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8_dp"
                android:text="@string/vote_rating"
                android:textSize="@dimen/main_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vote_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8_dp"
                android:paddingLeft="@dimen/padding_8_dp"
                android:paddingRight="@dimen/padding_8_dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>